--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,24 @@
 	</properties>
 	<dependencies>
 	
+
+	<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
+<dependency>
+    <groupId>javax.mail</groupId>
+    <artifactId>mail</artifactId>
+    <version>1.4.7</version>
+</dependency>
+	<!-- https://mvnrepository.com/artifact/org.springframework/spring-context-support --> 
+	<dependency>
+	 <groupId>org.springframework</groupId> 
+	<artifactId>spring-context-support</artifactId> 
+	<version>${org.springframework-version}</version>
+	 </dependency>
+
+
+
+
+		
 		<!-- spring-security-core : 스프링 시큐리티 기본 모듈 -->
 		<dependency>
 			<groupId>org.springframework.security</groupId>
